--- a/moscow/app/views/index.ejs
+++ b/moscow/app/views/index.ejs
@@ -8,9 +8,11 @@
     </title>
   </head>
   <body>
-    <img src="img/subzero.jpg" width='30%'	alt="Logo">
-    <h1>
-      <%= title %>
-    </h1>
+    <% if ( userFullName ) { %>
+    <h2>
+      Hello <%=userFullName%>
+    </h2><a href="/signout">Sign out</a> <% } else { %> <a href=
+    "/signup">Signup</a> <a href="/signin">Signin</a> <% } %><br>
+    <img src="img/subzero.jpg" width='30%' alt="mkx">
   </body>
 </html>
