--- a/moscow/app/views/index.ejs
+++ b/moscow/app/views/index.ejs
@@ -1,18 +1,18 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
   <head>
-    <meta name="generator" content=
-    "HTML Tidy for Windows (vers 14 February 2006), see www.w3.org">
+    <meta name="generator"
+    content="HTML Tidy for HTML5 (experimental) for Windows https://github.com/w3c/tidy-html5/tree/c63cc39" />
     <title>
       <%= title %>
     </title>
   </head>
-  <body>
-    <% if ( userFullName ) { %>
-    <h2>
-      Hello <%=userFullName%>
-    </h2><a href="/signout">Sign out</a> <% } else { %> <a href=
-    "/signup">Signup</a> <a href="/signin">Signin</a> <% } %><br>
-    <img src="img/subzero.jpg" width='30%' alt="mkx">
-  </body>
+  <body><% if ( userFullName ) { %>
+  <h2>Hello <%=userFullName%></h2>
+  <a href="/signout">Sign out</a> <% } else { %> 
+  <a href="/signup">Signup</a> 
+  <a href="/signin">Signin</a> <% } %>
+  <br />
+  <img src="img/subzero.jpg" width='30%' alt="mkx" /></body>
+  <script type="text/javascript" src="/lib/angular/angular.js"></script>
 </html>
