--- a/moscow/public/articles/views/list-articles.client.view.html
+++ b/moscow/public/articles/views/list-articles.client.view.html
@@ -1,8 +1,10 @@
-<section data-ng-controller="ArticlesController" data-nginit="find()">
+<!-- The list articles view -->
+<section data-ng-controller="ArticlesController" data-ng-init="find()">
 	<h1>Articles</h1>
 	<ul>
+		<!-- The list of article -->
 		<li data-ng-repeat="article in articles">
-			<a data-ng-href="#!/articles/{{article._id}}" data-ngbind="article.title"></a>
+			<a data-ng-href="#!/articles/{{article._id}}" data-ng-bind="article.title"></a>
 			<br>
 			<small data-ng-bind="article.created | date:'medium'"></small>
 			<small>/</small>
@@ -10,6 +12,8 @@
 			<p data-ng-bind="article.content"></p>
 		</li>
 	</ul>
-	<div data-ng-hide="!articles || articles.length">No articles yet, why don't you create one?</div>
-	<p>Test</p>
+	<!-- If there are no articles in the list, suggest the user's create a new article -->
+	<div data-ng-hide="!articles || articles.length">
+		No articles yet, why don't you <a href="/#!/articles/create">create one</a>?
+	</div>
 </section>
